--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 <head>
 <title>John Pindel</title>
+<meta name="viewport" content="width=device-width, initial-scale=1.0">
 <link rel="stylesheet" type="text/css" href="css\mystyle.css">
 </head>
 
