--- a/test1.html
+++ b/test1.html
@@ -24,19 +24,19 @@ body, html {
 
 /* First image (Logo. Full height) */
 .bgimg-1 {
-    background-image: url('imgs/arashiyama1.png');
+    background-image: url('imgs/arashiyama.jpg');
     min-height: 100%;
 }
 
 /* Second image (Portfolio) */
 .bgimg-2 {
-    background-image: url("imgs/arashiyama1.png");
+    background-image: url("imgs/arashiyama.jpg");
     min-height: 400px;
 }
 
 /* Third image (Contact) */
 .bgimg-3 {
-    background-image: url("/w3images/parallax3.jpg");
+    background-image: url("/w3images/arashiyama.jpg");
     min-height: 400px;
 }
 
@@ -104,7 +104,7 @@ business's ever growing needs. At Discover we work in a combination of lean and 
   <div class="w3-row">
     <div class="w3-col m6 w3-center w3-padding-large">
       <p><b><i class="fa fa-user w3-margin-right"></i>John Pindel</b></p><br>
-      <img src="imgs/me1_opt1.jpg" class="w3-round w3-image" alt="Photo of Me" width="200" height="106">
+      <img src="imgs/me.jpg" class="w3-round w3-image" alt="Photo of Me" width="200" height="106">
     </div>
 
     <!-- Hide this text on small devices -->
@@ -113,11 +113,6 @@ business's ever growing needs. At Discover we work in a combination of lean and 
     </div>
   </div>
   <p class="w3-large w3-center w3-padding-16">Skills:</p>
-
-<!--  <p class="w3-wide"><i class="fa fa-camera"></i>Photography</p>
-  <div class="w3-progress-container">
-    <div class="w3-progressbar" style="width:90%"></div>
-  </div> -->
 
   <p class="w3-wide"><i class="fa fa-book"></i>Education</p>
   <ul class="w3-center w3-padding-16 w3-ul w3-card-4">
@@ -142,33 +137,9 @@ business's ever growing needs. At Discover we work in a combination of lean and 
     <li>Github, Gradle, Jenkins</li>
     <li>Angile & Lean methodology</li>
   </ul>
-<!--  <div class="w3-progress-container">
-    <div class="w3-progressbar" style="width:85%"></div>
-  </div>-->
-<!--  <p class="w3-wide"><i class="fa fa-photo"></i>Photoshop</p>
-  <div class="w3-progress-container">
-    <div class="w3-progressbar" style="width:75%"></div>
-  </div> -->
 </div>
 
 <div class="w3-row w3-center w3-dark-grey w3-padding-16">
-<!--  <div class="w3-quarter w3-section">
-    <span class="w3-xlarge">14+</span><br>
-    Partners
-  </div>
-  <div class="w3-quarter w3-section">
-    <span class="w3-xlarge">55+</span><br>
-    Projects Done
-  </div>
-  <div class="w3-quarter w3-section">
-    <span class="w3-xlarge">89+</span><br>
-    Happy Clients
-  </div>
-  <div class="w3-quarter w3-section">
-    <span class="w3-xlarge">150+</span><br>
-    Meetings
-  </div>-->
-</div>
 
 <!-- Second Parallax Image with Portfolio Text -->
 <div class="bgimg-2 w3-display-container w3-opacity-min">
@@ -213,14 +184,6 @@ business's ever growing needs. At Discover we work in a combination of lean and 
   </div>
 </div>
 
-<!-- Modal for full size images on click
-<div id="modal01" class="w3-modal w3-black" onclick="this.style.display='none'">
-  <span class="w3-closebtn w3-text-white w3-opacity w3-hover-opacity-off w3-xxlarge w3-container w3-display-topright" title="Close Modal Image"><i class="fa fa-remove"></i></span>
-  <div class="w3-modal-content w3-animate-zoom w3-center w3-transparent w3-padding-64">
-    <img id="img01" class="w3-image">
-    <p id="caption" class="w3-opacity w3-large"></p>
-  </div>
-</div>-->
 
 <!-- Third Parallax Image with Portfolio Text -->
 <div class="bgimg-3 w3-display-container w3-opacity-min">
