--- a/test1.html
+++ b/test1.html
@@ -24,19 +24,19 @@ body, html {
 
 /* First image (Logo. Full height) */
 .bgimg-1 {
-    background-image: url('imgs/arashiyama.jpg');
+    background-image: url('pics/arashiyama.jpg');
     min-height: 100%;
 }
 
 /* Second image (Portfolio) */
 .bgimg-2 {
-    background-image: url("imgs/arashiyama.jpg");
+    background-image: url("pics/arashiyama.jpg");
     min-height: 400px;
 }
 
 /* Third image (Contact) */
 .bgimg-3 {
-    background-image: url("/w3images/arashiyama.jpg");
+    background-image: url("pics/arashiyama.jpg");
     min-height: 400px;
 }
 
@@ -104,7 +104,7 @@ business's ever growing needs. At Discover we work in a combination of lean and 
   <div class="w3-row">
     <div class="w3-col m6 w3-center w3-padding-large">
       <p><b><i class="fa fa-user w3-margin-right"></i>John Pindel</b></p><br>
-      <img src="imgs/me.jpg" class="w3-round w3-image" alt="Photo of Me" width="200" height="106">
+      <img src="pics/me.jpg" class="w3-round w3-image" alt="Photo of Me" width="200" height="106">
     </div>
 
     <!-- Hide this text on small devices -->
