--- a/index.html
+++ b/index.html
@@ -155,7 +155,7 @@ business's ever growing needs. At Discover we work in a combination of lean and 
 
   <ul class="w3-center w3-padding-20 w3-ul w3-card-4">
       <li class="expand">Discover Deals Overhaul
-          <span class="info"></br>On Discover's website we have a "Deals" webpage. Here customers can redemm cash back bonus coupons.
+          <span class="info"></br>On Discover's website we have a "Deals" webpage. Here customers can redeem cash back bonus coupons.
             I implemented an outsourced overhaul on this page.
           </span>
       </li>
