--- a/index.html
+++ b/index.html
@@ -234,7 +234,8 @@ business's ever growing needs. At Discover we work in a combination of lean and 
 </footer>
 
 <!-- Add Google Maps -->
-<script src="https://maps.googleapis.com/maps/api/js"></script>
+ <script async defer src="https://maps.googleapis.com/maps/api/js?key=AIzaSyCzMVS61EgDLmHjqJHXzARuoT8M26w6lkM&callback=initMap"
+  type="text/javascript"></script>
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.1.1/jquery.min.js"></script>
 <script>
 <!-- Google Map Location -->
