--- a/index.html
+++ b/index.html
@@ -200,7 +200,7 @@ business's ever growing needs. At Discover we work in a combination of lean and 
   <div class="w3-row w3-padding-32 w3-section">
     <div class="w3-col m4 w3-container">
       <!-- Add Google Maps -->
-      <div id="googleMap" class="w3-round-large w3-greyscale" style="width:100%;height:400px;"></div>
+      <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d2957.6973729046776!2d-87.89229838454467!3d42.1567623792011!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x880fbf215128afe1%3A0x334dc8c8fc8e74d2!2sDiscover+Financial+Services!5e0!3m2!1sen!2sus!4v1486136842895"  width="auto" height="400px" frameborder="0" style="border:0" allowfullscreen> </iframe></div>
     </div>
     <div class="w3-col m8 w3-container w3-section">
       <div class="w3-large w3-margin-bottom">
@@ -232,33 +232,6 @@ business's ever growing needs. At Discover we work in a combination of lean and 
   <a href="#home" class="w3-btn w3-padding w3-light-grey w3-hover-grey"><i class="fa fa-arrow-up w3-margin-right"></i>To the top</a>
 
 </footer>
-
-<!-- Add Google Maps -->
- <script src="https://maps.googleapis.com/maps/api/js"></script>
-<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.1.1/jquery.min.js"></script>
-<script>
-<!-- Google Map Location -->
-var myCenter = new google.maps.LatLng(42.1567624,-87.8922984,17);
-
-function initialize() {
-var mapProp = {
-  center: myCenter,
-  zoom: 12,
-  scrollwheel: false,
-  draggable: false,
-  mapTypeId: google.maps.MapTypeId.ROADMAP
-  };
-
-var map = new google.maps.Map(document.getElementById("googleMap"),mapProp);
-
-var marker = new google.maps.Marker({
-  position: myCenter,
-});
-
-marker.setMap(map);
-}
-
-google.maps.event.addDomListener(window, 'load', initialize);
 
 // Modal Image Gallery
 function onClick(element) {
