--- a/index.html
+++ b/index.html
@@ -232,7 +232,9 @@ business's ever growing needs. At Discover we work in a combination of lean and 
   <a href="#home" class="w3-btn w3-padding w3-light-grey w3-hover-grey"><i class="fa fa-arrow-up w3-margin-right"></i>To the top</a>
 
 </footer>
-
+ <script src="https://maps.googleapis.com/maps/api/js"></script>		
+ <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.1.1/jquery.min.js"></script>		
+ <script>
 // Modal Image Gallery
 function onClick(element) {
   document.getElementById("img01").src = element.src;
