--- a/index.html
+++ b/index.html
@@ -97,9 +97,7 @@ body, html {
 <div class="w3-content w3-container w3-padding-64" id="about">
   <h3 class="w3-center">ABOUT ME</h3>
  <!-- <p class="w3-center"><em>I love photography</em></p> -->
-  <p> Hi! I'm John. I am a web developer for Discover Financial Services. I mostly work in java writing business logic to connect our service calls to the back end to the front end. I have a lot of expirence writing and managing REST serveices to display
-infomation  on our consumer website and app. This involves testing in Postman as well as on all internet browsers and mobile operating systems. I also help maintain and update certain webapges on our consumer website. We often have to make U.I fixes for debuggs and to meet the
-business's ever growing needs. At Discover we work in a combination of lean and agile. I particapte in daily standups, sprint grooming, rally, as well demoing my projects to business owners.
+  <p> Hi my name is John! I am a recent college graduate from Northern Illinois University. I have a bachelor's in computer science and philosophy. I have been working as a front end developer for Discover Financial Services for a year now. I work with an agile/lean sprint time practicing continuous integration on our consumer facing web site and app millions of customers use. I am experienced with technologies such as java, c++, sql, html, css, xml, json, js, jquery, REST, soap, gradle, jenkins, spring framework, apache tomcat, pcf, sql, github, alm. My team works on the rewards feature of website. This entails features that get our customers there cashback bonus and charity promotions. As a developer my job entails maintaining and updating our big browser web pages and mobile/app responsive counterparts. I primarily work on the business logic driving the site and connecting the front end to middleware/backend services, U.I bug fixes and updates, REST and SOAP services, and overseeing application installations. I also am part of an agile/lean sprint team that practices continuous integration.
   </p>
   <div class="w3-row">
     <div class="w3-col m6 w3-center w3-padding-large">
@@ -109,7 +107,7 @@ business's ever growing needs. At Discover we work in a combination of lean and 
 
     <!-- Hide this text on small devices -->
     <div class="w3-col m6 w3-hide-small w3-padding-large">
-      <p>In my free time I learn things. I'm learning Japanese and guitar as hobbies. As well as deeloping this site when I have time. I also like to travel and learn about other culutres. To relax I like to read or play video games. </p>
+      <p>In my free time I like learning new things. I’ve been teaching myself guitar and I’m trying to master making French Macaroons. I speak intermediate Japanese  and practice every day with the end goal of becoming fluent and employed in Japan.  日本に住んでいたい。I have a blog on a language exchange site that can be found <a href="http://lang-8.com/1767538/journals">here</a>. To relax I like to read or play video games.</p>
     </div>
   </div>
   <p class="w3-large w3-center w3-padding-16">Skills:</p>
@@ -232,8 +230,8 @@ business's ever growing needs. At Discover we work in a combination of lean and 
   <a href="#home" class="w3-btn w3-padding w3-light-grey w3-hover-grey"><i class="fa fa-arrow-up w3-margin-right"></i>To the top</a>
 
 </footer>
- <script src="https://maps.googleapis.com/maps/api/js"></script>		
- <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.1.1/jquery.min.js"></script>		
+ <script src="https://maps.googleapis.com/maps/api/js"></script>
+ <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.1.1/jquery.min.js"></script>
  <script>
 // Modal Image Gallery
 function onClick(element) {
