--- a/index.html
+++ b/index.html
@@ -107,7 +107,7 @@ body, html {
 
     <!-- Hide this text on small devices -->
     <div class="w3-col m6 w3-hide-small w3-padding-large">
-      <p>In my free time I like learning new things. I’ve been teaching myself guitar and I’m trying to master making French Macaroons. I speak intermediate Japanese  and practice every day with the end goal of becoming fluent and employed in Japan.  日本に住んでいたい。I have a blog on a language exchange site that can be found <a href="http://lang-8.com/1767538/journals">here</a>. To relax I like to read or play video games.</p>
+      <p>In my free time I like learning new things. I’ve been teaching myself guitar and I’m trying to master making French Macaroons. I speak intermediate Japanese  and practice every day with the end goal of becoming fluent and employed in Japan. I have a blog on a language exchange site that can be found <a href="http://lang-8.com/1767538/journals">here</a>. To relax, I like to read or play video games.</p>
     </div>
   </div>
   <p class="w3-large w3-center w3-padding-16">Skills:</p>
